enviando form de login

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,16 @@
     <title>Projeto Base</title>
 </head>
 <body>
-    
-</body>
+    <form>
+        <label for="fname">Nome de usuário ou endereço de e-mail</label><br>
+        <input type="text" id="fname" name="fname" value=""><br>
+        <label for="1name">Senha</label></label><br> 
+        <input type="password" id="1name" name="1name" value=""><br>
+        <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+        <label for="vehicle1"> Lembrar-me </label>
+        <input type="submit" value="Entrar">
+        </form>
+        
+        <a href="https://www.youtube.com">Esqueceu a senha?</a> 
+        </body>
 </html>
