--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,17 @@
     <title>Projeto Base</title>
 </head>
 <body>
-    
+<p> Sou aluno do Labinec</p>
+
 </body>
+<form action="/action_page.php">
+    <label for="fname">Nome de usuário ou endereço de e-mail</label><br>
+    <input type="text" id="fname" name="fname" value="Pedro"><br>
+    <label for="lname">senha</label><br>
+    <input type="password" id="lname" name="lname" value="Alves"><br><br>
+    <input type="checkbox" name="fname" id="fname">lembrar-me</lembrar-me>
+    <input type="submit" value="entrar">
+
+</form>
 </html>
+<a href="https://www.google.com.br/">redefinir senha</a>
