--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Base</title>
 </head>
-<body>
+<body> 
     
+    <div style="text-align:center">
+    <form action="/action_page.php">
+        <label for="fname">Nome de usuário ou endereço de e-mail</label>
+        <input type ="text" id="fname" namde="fname"><br><br>
+        <label for="lname">Senha</label> 
+        <input type="text" id="lname" name="lname"><br><br>
+
+        <input type="checkbox" id="ch">
+        <label for="ch">mostrar senha</label>
+        <input type="submit" value="Acessar">
+    
+
+ </form>
+ <a href="https://lik.com">esqueceu a senha</a>  
+ 
+
 </body>
 </html>
