enviando form login

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Base</title>
 </head>
-<body>
+<body> <h1>LABPET
+
+</h1>
+  <form>
+      <label for="fname">Email ou nome de usuário:</label><br>
+      <input type="text" id="fname" name="fname"value="Raquel"><br>
+      <label for="lname">Senha:</label><br>
+      <input type="text" id="lname" name="lname" value="********">
+      </form><form action=""></form>
+      <input type="SUBMIT" value="SUBMIT">
+    </form>
+    <button type="button" onclick="alert('Hello World!')">I forgot the password</button>
+  
+
+
+      
+  </form>
     
-</body>
-</html>
+</h1>
