enviando form login

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,18 @@
 </head>
 <body>
     
+    
+    </p>
 </body>
-</html>
+</html> 
+ <form>
+    <label for="fname"> Nome ou endereço de email: </label>
+    <input type="text" id="fname" name="fname"><br><br>
+    <label for="lname">Senha:</label>
+    <input type="text" id="lname" name="lname"><br><br>
+    <input type="checkbox" id="remember" name="remember" value="lembrar-me">
+    <label for="remember">lembrar-me</label><br><br>
+    <button type="button">Enviar</button>
+
+
+ </form>
