--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        h1 {
+          text-align: center;
+        }
+    
+    </style>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Base</title>
 </head>
 <body>
-<p> Sou aluno do Labinec</p>
-
+    <h1>LabPet</h1>
+    <form action="/action_page.php">
+        <label for="fname">Nome de usuário ou endereço de e-mail</label><br>
+        <input type="text" id="fname" name="fname" value="Pedro"><br>
+        <label for="lname">senha</label><br>
+        <input type="password" id="lname" name="lname" value="Alves"><br><br>
+        <input type="checkbox" name="fname" id="fname">lembrar-me</lembrar-me>
+        <input type="submit" value="entrar">
+        
+    </form>
+    <a href="https://www.google.com.br/">redefinir senha</a>
 </body>
-<form action="/action_page.php">
-    <label for="fname">Nome de usuário ou endereço de e-mail</label><br>
-    <input type="text" id="fname" name="fname" value="Pedro"><br>
-    <label for="lname">senha</label><br>
-    <input type="password" id="lname" name="lname" value="Alves"><br><br>
-    <input type="checkbox" name="fname" id="fname">lembrar-me</lembrar-me>
-    <input type="submit" value="entrar">
-
-</form>
 </html>
-<a href="https://www.google.com.br/">redefinir senha</a>
