--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Base</title>
-</head>
-<body>
+<style>
+    body {
+        margin-top: 18%;
+    }
+    h1 {
+      color: rgb(0, 0, 0);
+      text-align: center;
+    } 
+    h1 {
+      font-family: verdana;
+      font-size: 26px;
+    }
+    </style>
+    </head>
+    <body>
+    
+    <h1>LABPET<h1>
+    
     <form>
         <label for="fname">Nome de usuário ou endereço de e-mail</label><br>
         <input type="text" id="fname" name="fname" value=""><br>
