--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        form{
+            margin-top: 10%;
+        }
+        head{
+            margin-top: 10%;
+        }
+        body{
+            text-align: center;
+        }
+        h2{
+            color:   rgb(36,36,255);
+        background-color: black;
+        }
+        h2{
+            text-align: center;
+        }
+
+    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Base</title>
 </head>
 <body>
-    
+    <h2> LabPet</h2>
+    <form action="/action_page-.php">
+        <label for="fname"> Email ou usuário</label><br>
+        <input type="text" id="fname" name="fname" value="Pedro"><br>
+        <label for="lname"> Senha</label><br>
+        <input type="password" id="lname" name="lname" value="senha"><br><br>
+        <input type="submit" value="entrar"><br>
+        <input type="checkbox" value="Lembrar-me">
+
+    </form>
+    <a href="https://html-color.codes/">Esqueci senha</a>
+
 </body>
 </html>
