--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto Base</title>
-</head>
-<body>
-    <form>
-        <label for="fname">Nome de usuário ou endereço de e-mail</label><br>
-        <input type="text" id="fname" name="fname" value=""><br>
-        <label for="1name">Senha</label></label><br> 
-        <input type="password" id="1name" name="1name" value=""><br>
-        <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+
+    <style>
+      div {
+        background-color: antiquewhite;
+        width: 300px;
+        padding: 50px;
+        margin: auto;
+      }
+
+      h1 {
+        text-align: center;
+        text-transform: uppercase;
+        color: #4caf50;
+      }
+
+      p {
+        text-indent: 50px;
+        text-align: justify;
+        letter-spacing: 3px;
+      }
+
+      a {
+        text-decoration: none;
+        color: #008cba;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div>
+      <h1>LABPET</h1>
+
+      <form>
+        <label for="fname">Nome de usuário ou endereço de e-mail</label><br />
+        <input type="text" id="fname" name="fname" value="" /><br />
+        <label for="1name">Senha</label><br />
+        <input type="password" id="1name" name="1name" value="" /><br />
+        <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike" />
         <label for="vehicle1"> Lembrar-me </label>
-        <input type="submit" value="Entrar">
-        </form>
-        
-        <a href="https://www.youtube.com">Esqueceu a senha?</a> 
-        </body>
+        <input type="submit" value="Entrar" />
+      </form>
+    </div>
+
+    <div>
+      <img src="../img/login.png" alt="" />
+    </div>
+  </body>
 </html>
