--- a/src/index.html
+++ b/src/index.html
@@ -38,18 +38,22 @@
       <h1>LABPET</h1>
 
       <form>
-        <label for="fname">Nome de usuário ou endereço de e-mail</label><br />
-        <input type="text" id="fname" name="fname" value="" /><br />
-        <label for="1name">Senha</label><br />
-        <input type="password" id="1name" name="1name" value="" /><br />
-        <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike" />
-        <label for="vehicle1"> Lembrar-me </label>
-        <input type="submit" value="Entrar" />
+        <center>
+          <label for="fname">Nome de usuário ou endereço de e-mail</label><br />
+          <input type="text" id="fname" name="fname" value="" /><br />
+          <label for="1name">Senha</label><br />
+          <input type="password" id="1name" name="1name" value="" /><br />
+          <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike" />
+          <label for="vehicle1"> Lembrar-me </label>
+          <input type="submit" value="Entrar" />
+        </center>
       </form>
     </div>
 
     <div>
-      <img src="../img/login.png" alt="" />
+      <center>
+        <img src="../img/login.png" alt="login" width="300px" />
+      </center>
     </div>
   </body>
 </html>
