--- a/src/index.html
+++ b/src/index.html
@@ -1,59 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projeto Base</title>
-
-    <style>
-      div {
-        background-color: antiquewhite;
-        width: 300px;
-        padding: 50px;
-        margin: auto;
-      }
-
-      h1 {
-        text-align: center;
-        text-transform: uppercase;
-        color: #4caf50;
-      }
-
-      p {
-        text-indent: 50px;
-        text-align: justify;
-        letter-spacing: 3px;
-      }
-
-      a {
-        text-decoration: none;
-        color: #008cba;
-      }
-    </style>
-  </head>
-
-  <body>
-    <div>
-      <h1>LABPET</h1>
-
-      <form>
-        <center>
-          <label for="fname">Nome de usuário ou endereço de e-mail</label><br />
-          <input type="text" id="fname" name="fname" value="" /><br />
-          <label for="1name">Senha</label><br />
-          <input type="password" id="1name" name="1name" value="" /><br />
-          <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike" />
-          <label for="vehicle1"> Lembrar-me </label>
-          <input type="submit" value="Entrar" />
-        </center>
-      </form>
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+ <div class="container"
+   class="row"
+   class="col-12"
+        <img 
+        src="../img/WhatsApp Image 2022-03-18 at 14.12.42.jpeg"
+        width="100%"
+        height="50px"
+</div>
+    
+<nav class="navbar navbar-expand-lg navbar-light bg-info">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"></a>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Quem Somos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Promoções</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Mais vendidos
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled">Trabalhe Conosco</a>
+          </li>
+        </ul>
+        <form class="d-flex">
+        </form>
+      </div>
     </div>
+  </nav>
 
-    <div>
-      <center>
-        <img src="../img/login.png" alt="login" width="300px" />
-      </center>
-    </div>
-  </body>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>   
+</body>
 </html>
