--- a/src/index.html
+++ b/src/index.html
@@ -1,64 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
-<head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body> <nav class="navbar navbar-expand-lg navbar-blue bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">LABPET</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Quem somos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Promoções</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Mais vendidos
-              </li>
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item disabled">
-            <a class="nav-link disabled">Trabalhe conosco</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-            </div>
-        </div>
-    </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    
-</body>
-</html>
-=======
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -109,12 +50,8 @@
           </nav>
         </div>
         <div id="qs">
-          <img
-            src="../img/bdd231b3-c3e1-41cf-8fb4-b62ba0d9cbd3.jpg"
-            width="100%"
-            height="500px"
-          />
-          Quem somos
+          <p> A LABPET ESTÁ HÁ 7 ANOS LEVAVANDO O QUE A DE MELHOR EM PRODUTOS DE PETSHOP!</p>
+          <img src="https://static1.patasdacasa.com.br/articles/1/14/1/@/patas-opengraph_1200-1.jpg"
         </div>
         <div id="promo">
           <img
@@ -147,4 +84,3 @@
     ></script>
   </body>
 </html>
->>>>>>> origin/felipe
