--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,21 @@
     />
   </head>
   <body>
+      <Style>
+    h1 {
+        color: rgb(0, 0, 0);
+        text-align: center;
+        margin-top: 8%;
+        background-color: bisque;
+       } 
+    </Style>
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <img
-            src="../img/bdd231b3-c3e1-41cf-8fb4-b62ba0d9cbd3.jpg"
+            <img
+            src="../img/123a74.jfif"
             width="100%"
-            height="50px"
+            height="125px"
           />
         </div>
         <div class="col-10 offset-1 sticky-top">
@@ -51,11 +59,21 @@
         </div>
         <div id="qs">
           <img
-            src="../img/bdd231b3-c3e1-41cf-8fb4-b62ba0d9cbd3.jpg"
-            width="100%"
+            src="../img/donoid_01.jpg"
+            width="50%"
             height="500px"
-          />
-          Quem somos
+            src="..." class="rounded float-end" alt="..."
+            />
+           
+            <h1> 
+                A LABPET ESTÁ HÁ <br>
+                7 ANOS LEVANDO <br>
+                O QUE A DE <br>
+                MELHOR EM <br>
+                PRODUTOS DE <br>
+                PETSHOP! <br>
+            </h1>
+
         </div>
         <div id="promo">
           <img
