--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,13 @@
     />
   </head>
   <body>
+    <style>
+      h1 {
+        color: rgb(0, 0, 0);
+        text-align: center;
+        margin-top: 8%;
+      }
+    </style>
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -51,11 +58,21 @@
         </div>
         <div id="qs">
           <img
-            src="../img/bdd231b3-c3e1-41cf-8fb4-b62ba0d9cbd3.jpg"
-            width="100%"
+            src="../img/transparente.png.png"
+            width="40%"
             height="500px"
+            src="..."
+            class="rounded float-end"
+            alt="..."
           />
-          Quem somos
+
+          <h1>
+            A LABPET ESTÁ HÁ <br />
+            7 ANOS LEVANDO O <br />
+            QUE A DE MELHOR<br />
+            EM PRODUTOS DE<br />
+            PETSHOP!<br />
+          </h1>
         </div>
         <div id="promo">
           <img
