--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="./index.css" rel="stylesheet"/>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -49,10 +50,24 @@
             </div>
           </nav>
         </div>
-        <div 
-        <p>Nós do LABPET somos uma empresa de adoção de animais, tambem temos produtos de qualidade além de te ajudar a encontrar seu amigo pet.
-        <br> <br> </p>
-        </div>
+       </div>
+       <div>
+       </div>
+      
+      <div>
+        
+        <p> 
+          <h1> 
+          A LABPET <br>
+          ESTÁ A 7 ANOS <br>
+           LEVANDO O QUE <br>
+           HA DE MELHOR <br>
+           EM PRODUTOS <br> 
+           DE PETSHOP.
+           </h1> 
+          </p>
+
+      </div>
        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
