--- a/src/index.html
+++ b/src/index.html
@@ -11,24 +11,13 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link href="./index.css" rel="stylesheet" />
   </head>
   <body>
-      <Style>
-    h1 {
-        color: rgb(0, 0, 0);
-        text-align: center;
-        margin-top: 8%;
-        background-color: bisque;
-       } 
-    </Style>
     <div class="container">
       <div class="row">
         <div class="col-12">
-            <img
-            src="../img/123a74.jfif"
-            width="100%"
-            height="125px"
-          />
+          <img src="../img/123a74.jfif" width="100%" height="125px" />
         </div>
         <div class="col-10 offset-1 sticky-top">
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -59,42 +48,88 @@
         </div>
         <div id="qs">
           <img
-            src="../img/donoid_01.jpg"
+            src="../img/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.jpg"
             width="50%"
             height="500px"
-            src="..." class="rounded float-end" alt="..."
-            />
-           
-            <h1> 
-                A LABPET ESTÁ HÁ <br>
-                7 ANOS LEVANDO <br>
-                O QUE A DE <br>
-                MELHOR EM <br>
-                PRODUTOS DE <br>
-                PETSHOP! <br>
-            </h1>
-
+            class="rounded float-end"
+            alt="..."
+          />
+          <h1>
+            A LABPET ESTÁ HÁ <br />
+            7 ANOS LEVANDO <br />
+            O QUE A DE <br />
+            MELHOR EM <br />
+            PRODUTOS DE <br />
+            PETSHOP! <br />
+          </h1>
         </div>
         <div id="promo">
-          <img
-            src="../img/bdd231b3-c3e1-41cf-8fb4-b62ba0d9cbd3.jpg"
-            width="100%"
-            height="500px"
-          />Promoçoes
+          <div
+            id="carouselExampleControls"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../img/1280x720.jpg" />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Gato batendo palma</h5>
+                  <p>R$15,00</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="../img/porque-cachorro-lambe-tudo-2-1280x720.jpg" />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Gato batendo palma</h5>
+                  <p>R$20,00</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="../img/gato-cinza-bonito-wallpaper-1280x720.jpg" />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Gato no mato</h5>
+                  <p>R$10,00</p>
+                </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleControls"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleControls"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
         <div id="mv">
           <img
             src="../img/bdd231b3-c3e1-41cf-8fb4-b62ba0d9cbd3.jpg"
-            width="100%"
+            width="50%"
             height="500px"
           />Mais Vendidos
         </div>
         <div id="tc">
           <img
             src="../img/bdd231b3-c3e1-41cf-8fb4-b62ba0d9cbd3.jpg"
-            width="100%"
+            width="50%"
             height="500px"
-          />Tabalhe conosco
+          />Trabalhe conosco
         </div>
       </div>
     </div>
