--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="col-12">
           <img
-            src="../img/bdd231b3-c3e1-41cf-8fb4-b62ba0d9cbd3.jpg"
+            src="https://mail.google.com/mail/u/0?ui=2&ik=82e68aee1d&attid=0.1&permmsgid=msg-f:1731370569273712199&th=1807105c0c201e47&view=att&disp=safe&realattid=180523d28a254aec9362"
             width="100%"
             height="50px"
           />
@@ -51,13 +51,13 @@
         </div>
         <div id="qs">
           <p> A LABPET ESTÁ HÁ 7 ANOS LEVAVANDO O QUE A DE MELHOR EM PRODUTOS DE PETSHOP!</p>
-          <img src="https://static1.patasdacasa.com.br/articles/1/14/1/@/patas-opengraph_1200-1.jpg"
+          <img src="https://mail.google.com/mail/u/0?ui=2&ik=82e68aee1d&attid=0.2&permmsgid=msg-f:1731370569273712199&th=1807105c0c201e47&view=att&disp=safe&realattid=180523d288854a0b1b51"
         </div>
         <div id="promo">
           <img
             src="../img/bdd231b3-c3e1-41cf-8fb4-b62ba0d9cbd3.jpg"
             width="100%"
-            height="500px"
+            height="50px"
           />Promoçoes
         </div>
         <div id="mv">
