--- a/src/index.html
+++ b/src/index.html
@@ -139,7 +139,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <script src="./index.js">  
+    <script src="./index2.js"> 
     </script>
   </body>
 </html>
