--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="./index.css" rel="stylesheet" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,21 +14,10 @@
     />
   </head>
   <body>
-    <style>
-      h1 {
-        color: rgb(0, 0, 0);
-        text-align: center;
-        margin-top: 8%;
-      }
-    </style>
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <img
-            src="../img/bdd231b3-c3e1-41cf-8fb4-b62ba0d9cbd3.jpg"
-            width="100%"
-            height="50px"
-          />
+          <img src="../img/logo.PNG" width="100%" height="80px" />
         </div>
         <div class="col-10 offset-1 sticky-top">
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -73,8 +63,73 @@
             EM PRODUTOS DE<br />
             PETSHOP!<br />
           </h1>
+          </div>
         </div>
         <div id="promo">
+          <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="10000">
+                <img src="../img/promo1.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>PROMOÇÃO BANHO</h5>
+                  <p>POR APENAS 29,90</p>
+                </div>
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="../img/promo 2.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>PROMOÇÃO KAMIKAZE</h5>
+                  <p>Com 30% de DESCONTO!</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="../img/promo 3.jpeg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>PROMOÇÃO SEGUNDA-FEIRA DO BANHO</h5>
+                  <p>POR APENAS  <R1>25,00</R1></p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleControls"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleControls"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
           <img
             src="../img/bdd231b3-c3e1-41cf-8fb4-b62ba0d9cbd3.jpg"
             width="100%"
