--- a/src/index.html
+++ b/src/index.html
@@ -1,145 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Yonit</title>
+
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;
+      0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:wght@700;800;900&display=swap"
       rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
     />
-    <link href="./index.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <img src="../img/123a74.jfif" width="100%" height="125px" />
-        </div>
-        <div class="col-10 offset-1 sticky-top">
-          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-              <div
-                class="collapse justify-content-center navbar-collapse"
-                id="navbarNav"
-              >
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#qs"
-                      >Quem somos</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#promo">Promoções</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#mv">Mais Vendidos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#tc">Trabalhe Conosco</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-        </div>
-        <div id="qs">
-          <img
-            src="../img/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.jpg"
-            width="50%"
-            height="500px"
-            class="rounded float-end"
-            alt="..."
-          />
-          <h1>
-            A LABPET ESTÁ HÁ <br />
-            7 ANOS LEVANDO <br />
-            O QUE A DE <br />
-            MELHOR EM <br />
-            PRODUTOS DE <br />
-            PETSHOP! <br />
-          </h1>
-        </div>
-        <div id="promo">
-          <div
-            id="carouselExampleControls"
-            class="carousel slide"
-            data-bs-ride="carousel"
-          >
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="../img/1280x720.jpg" />
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Gato batendo palma</h5>
-                  <p>R$15,00</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="../img/porque-cachorro-lambe-tudo-2-1280x720.jpg" />
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Gato batendo palma</h5>
-                  <p>R$20,00</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="../img/gato-cinza-bonito-wallpaper-1280x720.jpg" />
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Gato no mato</h5>
-                  <p>R$10,00</p>
-                </div>
-            </div>
-            <button
-              class="carousel-control-prev"
-              type="button"
-              data-bs-target="#carouselExampleControls"
-              data-bs-slide="prev"
-            >
-              <span
-                class="carousel-control-prev-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button
-              class="carousel-control-next"
-              type="button"
-              data-bs-target="#carouselExampleControls"
-              data-bs-slide="next"
-            >
-              <span
-                class="carousel-control-next-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-        </div>
-        <div id="mv">
-          <img
-            src="../img/bdd231b3-c3e1-41cf-8fb4-b62ba0d9cbd3.jpg"
-            width="50%"
-            height="500px"
-          />Mais Vendidos
-        </div>
-        <div id="tc">
-          <img
-            src="../img/bdd231b3-c3e1-41cf-8fb4-b62ba0d9cbd3.jpg"
-            width="50%"
-            height="500px"
-          />Trabalhe conosco
-        </div>
-      </div>
+    <div class="hero">
+      <nav>
+        <h2 class="logo">Yonit</h2>
+        <ul>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Serviços</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+        <button type="button">Pesquisar</button>
+      </nav>
     </div>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-    <script src="./index2.js"> 
-    </script>
   </body>
 </html>
