--- a/src/login.html
+++ b/src/login.html
@@ -61,7 +61,12 @@
       </h2> 
     </div>
     <div class="aka"> <img src="960x0.jpg" alt="Girl in a jacket" width="100%" height="100%"> </div>
+    <script>
+      var c=1
+      do (c<=10){console.log(c)
+      }
+    </script>
         </body>
-        
+    
 
 </html> 
