--- a/src/index.html
+++ b/src/index.html
@@ -11,20 +11,41 @@
       0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:wght@700;800;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div class="hero">
       <nav>
-        <h2 class="logo">Yonit</h2>
         <ul>
+          <img src="../img/Yanyt-removebg-preview.png" width="15%" />
           <li><a href="#">Inicio</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="#">22222</a></li>
           <li><a href="#">Serviços</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">33333</a></li>
+          <li><a href="#">Conta</a></li>
         </ul>
-        <button type="button">Pesquisar</button>
+        <form class="d-flex" role="search">
+          <input
+            class="form-control me-2"
+            type="search"
+            placeholder="Pesquisar"
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-success" type="submit">
+            Pesquisar
+          </button>
+        </form>
       </nav>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
