--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Yonit</title>
+    <title>Florys</title>
 
     <link rel="stylesheet" type="text/css" href="./style.css" />
 
@@ -22,11 +22,29 @@
     <div class="hero">
       <nav>
         <ul>
-          <img src="../img/Yanyt-removebg-preview.png" width="15%" />
+          <img src="../img/bannerfloryssss.png" width="20%" />
           <li><a href="#">Inicio</a></li>
-          <li><a href="#">22222</a></li>
-          <li><a href="#">Serviços</a></li>
-          <li><a href="#">33333</a></li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Produtos
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Cestas</a></li>
+              <li><a class="dropdown-item" href="#">Floricultura</a></li>
+              <li><a class="dropdown-item" href="#">Pelúcias</a></li>
+              <li><a class="dropdown-item" href="#">Chocolates</a></li>
+              <li><a class="dropdown-item" href="#">Decorações</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Vasos</a></li>
+          <li><a href="#">Cestas</a></li>
           <li><a href="#">Conta</a></li>
         </ul>
         <form class="d-flex" role="search">
