--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
           <img
             src="c:\Users\Mobile\Desktop\galeria\5.jpg"
             width="100%"
-            height="150px"
+            height="500px"
           />
         </div>
         <div id="qs" class="row">
@@ -104,7 +104,7 @@
           TEXTO
           </div>
         <div class="col-4">
-          FOTO
+          NOS A TECKART SOMOS UMA GALERIA PARA TODOS ARTISTAS DO MUNDO
         </div>
       </div>
     </div>
@@ -112,7 +112,7 @@
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="c:\Users\Mobile\Desktop\galeria\8.jfif" class="d-block w-100" alt="...">
+                <img src="c:\Users\Mobile\Desktop\galeria\7.jfif" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
                 <img src="c:\Users\Mobile\Desktop\galeria\7.jfif" class="d-block w-100" alt="...">
@@ -131,11 +131,7 @@
             </button>
           </div>
         </div>
-        <div id="mv">
-          <img
-            src="../img/bdd231b3-c3e1-41cf-8fb4-b62ba0d9cbd3.jpg"
-            width="100%"
-            height="500px"
+        
           />Box 3
         </div>
         <div id="tc">
@@ -145,8 +141,45 @@
             height="500px"
           />Box 4
         </div>
-      </div>
-    </div>
+        <div id="tc">
+          <img
+            src="../img/bdd231b3-c3e1-41cf-8fb4-b62ba0d9cbd3.jpg"
+            width="100%"
+            height="500px"
+            />Box 5
+        </div>
+          <div id="tc">
+            <img
+              src="../img/bdd231b3-c3e1-41cf-8fb4-b62ba0d9cbd3.jpg"
+              width="100%"
+              height="500px"
+        </div>
+        <div id="cards" class="row mt-2 justify-content-center ms-0">
+          <div class="col-4">
+            <div class="card">
+              <img src="c:\Users\Mobile\Desktop\galeria\9.jfif" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <p class="card-text">
+                  Area de ensino pratico com design.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="card">
+              <img src="c:\Users\Mobile\Desktop\galeria\10.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <p class="card-text">Area de ensino diministrativo.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="card">
+              <img src="c:\Users\Mobile\Desktop\galeria\12.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <p class="card-text">Area de ensino de desing de jogos.</p>
+              </div>
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
