--- a/src/Rinex.html
+++ b/src/Rinex.html
@@ -170,7 +170,8 @@
               ></span>
               <span class="visually-hidden">Next</span>
             </button>
-          </div>
+         </ div>
+          <img src="../img/testando mais uma vez.png"
         </div>
         <div id="cards" class="row mt-2 justify-content-center ms-0">
           <div class="col-4">
@@ -197,6 +198,9 @@
               <div class="card-body">
                 <p class="card-text">Calça moletom com elastico na cintura.</p>
               </div>
+              </ div>
+        </div>
+        <img src="../img/testando uma segunda vez.png"
             </div>
           </div>
         </div>
