--- a/src/Rinex.html
+++ b/src/Rinex.html
@@ -172,6 +172,7 @@
             </button>
          </ div>
           <img src="../img/testando mais uma vez.png"
+          </div>
         </div>
         <div id="cards" class="row mt-2 justify-content-center ms-0">
           <div class="col-4">
@@ -200,7 +201,9 @@
               </div>
               </ div>
         </div>
-        <img src="../img/testando uma segunda vez.png"
+<img src="../img/testando uma segunda vez.png" alt="barra" style="width: 500%">
+
+        
             </div>
           </div>
         </div>
