--- a/src/index.html
+++ b/src/index.html
@@ -161,10 +161,73 @@
             <div class="card-header">CONTINUE APRENDENDO</div>
             <div class="card-body">
               <h5 class="card-title">TESTE 01</h5>
-              <p class="card-text">
-                Habilite as proximas aulas fazendo este teste.
-              </p>
-              <a href="#" class="btn btn-primary">COMEÇAR</a>
+              <form action="/action_page.php">
+                <h2>Q1 what's ___ name?</h2>
+                 
+                <input
+                  type="radio"
+                  id="html"
+                  name="fav_language"
+                  value="HTML"
+                />
+                  <label for="html">you</label><br />
+                 
+                <input type="radio" id="css" name="fav_language" value="2" />  
+                <label for="css">my</label><br />
+                 
+                <input
+                  type="radio"
+                  id="javascript"
+                  name="fav_language"
+                  value="3"
+                />
+                  <label for="javascript">Your</label><br /><br />
+                
+              </form>
+              <h2>Q2 I don't like _____.</h2>
+                 
+                <input
+                  type="radio"
+                  id="html"
+                  name="fav_language"
+                  value="HTML"
+                />
+                  <label for="html">him</label><br />
+                 
+                <input type="radio" id="css" name="fav_language" value="2" />  
+                <label for="css">I</label><br />
+                 
+                <input
+                  type="radio"
+                  id="javascript"
+                  name="fav_language"
+                  value="3"
+                />
+                  <label for="javascript">Nenhuma das opções</label><br /><br />
+                
+                <h2>Q3 The apple is ______ the table.</h2>
+                 
+                <input
+                  type="radio"
+                  id="html"
+                  name="fav_language"
+                  value="HTML"
+                />
+                  <label for="html">under</label><br />
+                 
+                <input type="radio" id="css" name="fav_language" value="2" />  
+                <label for="css">in down</label><br />
+                 
+                <input
+                  type="radio"
+                  id="javascript"
+                  name="fav_language"
+                  value="3"
+                />
+                  <label for="javascript">up</label><br /><br />
+                <input type="submit" value="Submit" />
+              </form>
+              </form>
             </div>
           </div>
         </div>
