--- a/src/Rinex.html
+++ b/src/Rinex.html
@@ -234,13 +234,21 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/camp one.jpg" class="d-block w-100" alt="..." />
+              <img src="../img/camp umum.png" class="d-block w-100" alt="..." />
             </div>
             <div class="carousel-item">
-              <img src="../img/camp dois.jpg" class="d-block w-100" alt="..." />
+              <img
+                src="../img/camp doisdois.png"
+                class="d-block w-100"
+                alt="..."
+              />
             </div>
             <div class="carousel-item">
-              <img src="../img/camp tres.jpg" class="d-block w-100" alt="..." />
+              <img
+                src="../img/camp trestres.png"
+                class="d-block w-100"
+                alt="..."
+              />
             </div>
           </div>
           <button
