--- a/src/Rinex.html
+++ b/src/Rinex.html
@@ -74,11 +74,11 @@
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link disabled"
-                      href="#"
+                      class="nav-link"
+                      href="./rrindex.html"
                       tabindex="-1"
                       aria-disabled="true"
-                      >Roupas</a
+                      >Pedidos</a
                     >
                   </li>
                 </ul>
@@ -173,7 +173,7 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-          <img src="../img/testando mais uma vez.png" />
+          <img src="../img/testando mais uma vez.png" style="width: 100%" />
         </div>
 
         <div id="cards" class="row mt-2 justify-content-center ms-0">
