--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <div class="col-10 offset-1 sticky-top">
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="#">G.Art</a>
               <button
                 class="navbar-toggler"
                 type="button"
@@ -38,7 +38,7 @@
                     >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="./artistas.html">Artistas</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a
@@ -49,17 +49,17 @@
                       data-bs-toggle="dropdown"
                       aria-expanded="false"
                     >
-                      Dropdown
+                      categorias
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">impressionismo</a></li>
                       <li>
-                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">cubismo</a>
                       </li>
                       <li><hr class="dropdown-divider" /></li>
                       <li>
                         <a class="dropdown-item" href="#"
-                          >Something else here</a
+                          >arte de rua</a
                         >
                       </li>
                     </ul>
@@ -70,7 +70,7 @@
                       href="#"
                       tabindex="-1"
                       aria-disabled="true"
-                      >Disabled</a
+                      >Login</a
                     >
                   </li>
                 </ul>
@@ -192,7 +192,7 @@
                 alt="..."
               />
               <div class="card-body">
-                <p class="card-text">Area de design 3D.</p>
+                <p class="card-text">Area de design 2D,3D.</p>
               </div>
             </div>
           </div>
@@ -204,7 +204,7 @@
                 alt="..."
               />
               <div class="card-body">
-                <p class="card-text">Area de design 2D.</p>
+                <p class="card-text">Area de galeria.</p>
               </div>
             </div>
           </div>
@@ -223,7 +223,7 @@
           <div class="col-4">
             <div class="card">
               <img
-                src="c:\Users\Mobile\Desktop\galeria\10.png"
+                src="c:\Users\Mobile\Desktop\galeria\12.png"
                 class="card-img-top"
                 alt="..."
               />
@@ -235,12 +235,12 @@
           <div class="col-4">
             <div class="card">
               <img
-                src="c:\Users\Mobile\Desktop\galeria\12.png"
+                src="c:\Users\Mobile\Desktop\galeria\15.gif"
                 class="card-img-top"
                 alt="..."
               />
               <div class="card-body">
-                <p class="card-text">Area de animação 2D,3D.</p>
+                <p class="card-text">Area de animação 2D.</p>
               </div>
             </div>
           </div>
