--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" href="../src/index.css">
   </head>
   <body>
-<div class="menu"
+    <img src="../img/Anime Wallpaper Gif Hd (2).gif" loop="loop" style="opacity: 1; width: 1366;height: 744;">
+
+<div class="menu">
   <div class="col-10  offset-lg-0 sticky-top">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
         <div class="container-fluid">
@@ -47,7 +49,9 @@
       </nav>
     </div>
   </div>
+  
 <div class="center">
+  <H1>LOGIN</H1>
     <div class="inputBox">
      <input type="text" required="required">
     <span>Username</span>
@@ -65,6 +69,7 @@
     </div>
   </div>
 </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
