--- a/src/Game-pjt-web.html
+++ b/src/Game-pjt-web.html
@@ -5,12 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link
-      href="../src/index.css"
-      rel="stylesheet"
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./index.css"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
-
     />
   </head>
   <body>
@@ -46,11 +44,10 @@
         </div> 
       </nav>
     </div>
-  
 
-  <body background="../img/b22aa22b2f3f55b6468361158d52e2e7.gif">
-  
-    
+<img src="../img/Anime Wallpaper Gif Hd (2).gif "loop="loop" style="opacity: 1; width: 1366;height: 744;">
+
+       
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
   <style> div{ background-color: rgb(10, 10, 10);
   }</style>
