--- a/src/index.html
+++ b/src/index.html
@@ -89,22 +89,14 @@
             </div>
           </nav>
         </div>
-        <div class="col-12">
+        <div id="qs" class="col-12 mb-2">
           <img
-            src="c:\Users\Mobile\Desktop\galeria\5.jpg"
+            src="c:\Users\Mobile\Desktop\galeria\bem vindo.png"
             width="100%"
             height="500px"
           />
         </div>
-        <div id="qs" class="col-12">
-          <div class="row">
-            <div class="col-4">foto</div>
-            <div class="col-8">texto</div>
-            <div class="col-4">
-              Nos a G.Art somos uma galeria para todos os artistas do mundo
-            </div>
-          </div>
-        </div>
+        
         <div id="promo" class="col-12">
           <div
             id="carouselExampleControls"
@@ -114,24 +106,33 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
-                  src="c:\Users\Mobile\Desktop\galeria\7.jfif"
+                  src="c:\Users\Mobile\Downloads\v3.png"
                   class="d-block w-100"
                   alt="..."
                 />
+                <p>
+                  ARTES MAIS VISUALIZADAS
+                </p>
               </div>
               <div class="carousel-item">
                 <img
-                  src="c:\Users\Mobile\Desktop\galeria\7.jfif"
+                  src="c:\Users\Mobile\Desktop\galeria\v2.png"
                   class="d-block w-100"
                   alt="..."
                 />
+                <p>
+                  ARTES MAIS VISUALIZADAS
+                </p>
               </div>
               <div class="carousel-item">
                 <img
-                  src="c:\Users\Mobile\Desktop\galeria\7.jfif"
+                  src="c:\Users\Mobile\Desktop\galeria\vistos.png"
                   class="d-block w-100"
                   alt="..."
                 />
+                <p>
+                  ARTES MAIS VISUALIZADAS
+                </p>
               </div>
             </div>
             <button
@@ -161,24 +162,19 @@
           </div>
         </div>
 
-        Box 3
+          <div>
+            <h1>Envios</h1>
+          </div>
         <div id="tc">
           <img
-            src="c:\Users\Mobile\Desktop\galeria\7.jfif"
+            src="c:\Users\Mobile\Downloads\v4.png"
             width="100%"
             height="500px"
-          />Box 4
+          /><h1>Suas animações</h1>
         </div>
         <div id="tc1">
           <img
-            src="c:\Users\Mobile\Desktop\galeria\7.jfif"
-            width="100%"
-            height="500px"
-          />Box 5
-        </div>
-        <div id="tc2">
-          <img
-            src="c:\Users\Mobile\Desktop\galeria\7.jfif"
+            src="c:\Users\Mobile\Desktop\galeria\pixel.gif"
             width="100%"
             height="500px"
           />
