--- a/src/Rinex.html
+++ b/src/Rinex.html
@@ -270,6 +270,16 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
+        <div id="" class="col-12 text-center">
+          <button type="button" class="btn btn-outline-light">Primary</button>
+          <button type="button" class="btn btn-outline-dark">Secondary</button>
+          <button type="button" class="btn btn-outline-dark">Success</button>
+          <button type="button" class="btn btn-outline-dark">Danger</button>
+          <button type="button" class="btn btn-outline-dark">Warning</button>
+          <button type="button" class="btn btn-outline-dark">Info</button>
+          <button type="button" class="btn btn-outline-dark">Light</button>
+          <button type="button" class="btn btn-outline-dark">Dark</button>
+        </div>
       </div>
     </div>
 
