--- a/src/mais.html
+++ b/src/mais.html
@@ -36,7 +36,7 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdawn">
                 <li> <a class="dropdown-item" href="#">Apresentação</a></li>
                 <li> <a class="dropdown-item" href="#">Mundo</a></li>
-                <li> <a class="dropdown-item" href="../src/mais.html">Ilustrações</a></li>
+                <li> <a class="dropdown-item" href="#">Ilustrações</a></li>
      
                </ul>
             </li>
@@ -50,27 +50,6 @@
     </div>
   </div>
   
-<div class="center">
-  <H1>LOGIN</H1>
-    <div class="inputBox">
-     <input type="text" required="required">
-
-    <span>Username</span>
-  </div>
-
-  <div class="inputBox">
-    <input type="text" required="required">
-    <span>Passoword</span>
-  </div>
-  <div class="senha">
-  <div class="pass">Forgot Password?</div>
-    <input type="submit" value="Login">
-    <div class="signup_link"> 
-      Not a member? <a href="#">Signup</a>
-
-    </div>
-  </div>
-</div>
 
 
 
