--- a/src/Game-pjt-web.html
+++ b/src/Game-pjt-web.html
@@ -13,14 +13,25 @@
   <link rel="stylesheet" href="../src/index.css">
   </head>
   <body>
+    <img src="../img/OMORI_Logo.png" style="margin: 30px;">
+
+
+
+
+
+
+
+
+
+
     
-   <div class="col-12  offset-lg-0 sticky-top">
+ <div class="col-5  offset-lg-0 sticky-top">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
         <div class="container-fluid">
           <div class="collapse justify-content-center navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="box">Personagens</a>
+              <a class="nav-link" aria-current="page" href="../src/Game-pjt-web.html">Personagens</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#promo">Informações</a>
@@ -34,7 +45,7 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdawn">
                 <li> <a class="dropdown-item" href="#">Apresentação</a></li>
                 <li> <a class="dropdown-item" href="#">Mundo</a></li>
-                <li> <a class="dropdown-item" href="#">Ilustrações</a></li>
+                <li> <a class="dropdown-item" href="../src/mais.html">Ilustrações</a></li>
      
                </ul>
             </li>
@@ -81,10 +92,53 @@
   </div>
 </main>
 
-  
-<img src="../img/Anime Wallpaper Gif Hd (2).gif "loop="loop" style="opacity: 1; width: 1366;height: 744;">
+
+<main class="cards">
+<div class="box">
+  <div class="imgBx">
+    <img src="../img/basil.jpg">
+  </div>
+<div class="content">
+  <h2>Basil<br><span>Sunfloer</span></h2>
+  </div>
+</div>
+
+<div class="box">
+  <div class="imgBx">
+    <img src="../img/hero.jpg">
+    </div>
+  <div class="content">
+  <h2>Hero<br><span>cooker</span></h2>
+</div>
+</div>
+</main>
 
 
+
+<h2>Informações</h2>
+
+<div class="superbox"
+><div class="boxsobre">
+  <div class="game">
+    <img src="..//img/8f5c26ad28e4e6b400ed0a69fb3bc4f131a59aee_hq.jpg">
+  </div>
+<div class="texto">
+  <h2>Omori<br><span>Omori é um RPG de terror psicológico que está sendo criado no RPG Maker VX pela desenvolvedora indie Omocat. No jogo, o jogador precisa viajar entre dois mundos, que escondem vários segredos, e explorar suas próprias memórias.
+  </span></h2>
+  </div>
+</div>
+</div>
+<div class="superxob"
+><div class="boxsobre">
+  <div class="game">
+    <img src="..//img/8f5c26ad28e4e6b400ed0a69fb3bc4f131a59aee_hq.jpg">
+  </div>
+<div class="texto">
+  <h2>Omori<br><span>Omori é um RPG de terror psicológico que está sendo criado no RPG Maker VX pela desenvolvedora indie Omocat. No jogo, o jogador precisa viajar entre dois mundos, que escondem vários segredos, e explorar suas próprias memórias.
+  </span></h2>
+  </div>
+</div>
+</div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
   <style> div{ background-color: black;
