--- a/src/galery.html
+++ b/src/galery.html
@@ -10,10 +10,11 @@
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"/>
-    <link rel="stylesheet" href="../src/index.css">
+    <link rel="stylesheet" href="index.css">
+    <style></style>
   </head>
   <body>
-    <img src="../img/Anime Wallpaper Gif Hd (2).gif" loop="loop" style="opacity: 1; width: 1366;height: 744;">
+   
 
 <div class="menu">
   <div class="col-10  offset-lg-0 sticky-top">
@@ -34,9 +35,9 @@
                 Mais
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdawn">
-                <li> <a class="dropdown-item" href="#">Apresentação</a></li>
+                <li> <a class="dropdown-item" href="Game-pjt-web.html">Apresentação</a></li>
                 <li> <a class="dropdown-item" href="#">Mundo</a></li>
-                <li> <a class="dropdown-item" href="#">Ilustrações</a></li>
+                <li> <a class="dropdown-item" href="galery.html">Ilustrações</a></li>
      
                </ul>
             </li>
@@ -49,7 +50,55 @@
       </nav>
     </div>
   </div>
+  <div><ul>
+    <li><a href="#img1"><img src="../img/Screenshot_6.png" class="min"></a></li>
+    <li><a href="#img2"><img src="../img/1img.png" class="min"></a></li>
+    <li><a href="#img4"><img src="../img/2img.png" class="min"></a></li>
+    <li><a href="#img5"><img src="../img/3img.png" class="min"></a></li>
+    <li><a href="#img6"><img src="../img/4img.png" class="min"></a></li>
+  </ul>
   
+  <div class="lut" id="img1">
+    <div class="lut_img">
+    <a href="#img4" class="btn" id="prev">&#171;</a>
+    <a href="" class="btn" id="close">x</a>
+    <img src="../img/Screenshot_6.png">
+    <a href="#img2" class="btn" id="next">&#187;</a>
+  </div>
+  </div>
+  
+  <div class="lut" id="img2">
+    <div class="lut_img">
+    <a href="#img1" class="btn" id="prev">&#171;</a>
+    <a href="" class="btn" id="close">x</a>
+    <img src="../img/1img.png">
+    <a href="#img3" class="btn" id="next">&#187;</a>
+  </div>
+  </div>
+  
+  <div class="lut" id="img3">
+    <div class="lut_img">
+    <a href="#img2" class="btn" id="prev">&#171;</a>
+    <a href="" class="btn" id="close">x</a>
+    <img src="../img/2img.png">
+    <a href="#img4" class="btn" id="next">&#187;</a>
+  </div>
+  </div>
+  
+  <div class="lut" id="img4">
+    <div class="lut_img">
+    <a href="#img3" class="btn" id="prev">&#171;</a>
+    <a href="" class="btn" id="close">x</a>
+    <img src="../img/4img.png">
+    <a href="#img1" class="btn" id="next">&#187;</a>
+  </div>
+  </div>
+  </div>
+
+
+
+
+
 
 
 
