--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdawn">
                 <li> <a class="dropdown-item" href="#">Apresentação</a></li>
                 <li> <a class="dropdown-item" href="#">Mundo</a></li>
-                <li> <a class="dropdown-item" href="../src/mais.html">Ilustrações</a></li>
+                <li> <a class="dropdown-item" href="../src/galery.html">Ilustrações</a></li>
      
                </ul>
             </li>
